# ultra-tas

./: .gitignore  Cargo.toml
src/: archive.rs  data.rs  main.rs  merge.rs  pathfind-tests.rs  pathfind.rs  placement_search.rs  ppt1.rs  ppt2.rs  solve.rs  twoline.rs
src/fourline/: db.rs  merge.rs  mod.rs
src/sixline/: db.rs  mod.rs  search.rs
src/sixline2/: mod.rs
src/solve/: archive.rs  edges.rs
