[package]
name = "ultra-tas"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumset = { version = "1.0.6", features = ["serde"] }
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
dashmap = { version = "4.0.2", features = ["serde"] }
arrayvec = "0.7.1"
zstd = { version = "0.8.1", features = ["zstdmt"] }
structopt = "0.3.21"
bytemuck = { version = "1.5.1", features = ["derive"] }
pcf = { git = "https://github.com/MinusKelvin/pcf" }
smallvec = { version = "1.6.1", features = ["union", "serde"] }

[profile.release]
debug = true
